# mydumper

./: .bzrignore  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  PR-DESCRIPTION.md  README  README-machine-log.md  README.md  UPSTREAM_ROADMAP.md  VERSION  anonymizer.c  anonymizer.h  binlog.c  binlog.cpp  binlog.h  build.sh  build_static.diff  common.c  common.h  config.h.in  connection.c  connection.h  dump.c  g_unix_signal.c  g_unix_signal.h  getPassword.c  getPassword.h  index.html  logging.h  mydumper.c  mydumper.cnf  mydumper.h  mydumper_testing_db.sql  mydumper_testing_db_template.sql  myloader.c  myloader.h  (+8 more)
.circleci/: circleci_config_builder.sh  config.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: c-cpp.yml  check_nixpkgs_update.yml  docker-image-with-parameter.yml  docker-image.yml  docker-with-parameter.yml  docker.yml  submodule-sync.yml
PR_TEMPLATES/: FEATURE_DEFAULT_SCHEMA_CHECKSUMS.md  FEATURE_FIFO_UNLINK.md  PERF_COMPREHENSIVE_REMAINING_OPTIMIZATIONS.md  PERF_HOT_PATH_REWRITES.md  PERF_MONOTONIC_TIME_STREAM_HASHTABLE.md  PERF_MYDUMPER_WRITE_PATH.md  PERF_READ_DATA_MEMCHR.md  PERF_RESTORE_INSERT_HOT_PATH.md  PO10_SIMD_STRING_ESCAPING.md  PO11_O1_READY_TABLE_QUEUE.md  PO12_FIFO_DECOMPRESSION_THROTTLE.md  PO13_AUTO_THREAD_SCALING.md  PO1_BATCH_METADATA_PREFETCH.md  PO2_O1_IGNORE_ERRORS.md  PO4_LARGER_IO_BUFFERS.md  PO5_CACHED_LIST_LENGTH.md  PO6_ATOMIC_ROW_COUNTER.md  PO7_THREAD_LOCAL_ROW_BATCHING.md  PO8_PARALLEL_FSYNC.md  PO9_SKIP_METADATA_SORTING.md  PR1_SCHEMA_WAIT.md  PR2_LOAD_DATA_MUTEX.md  PR3_MACOS_BUILD.md  PR4_SCHEMA_JOB_RETRY.md  PR5_NO_DATA_DEADLOCK.md  PR6_SCHEMA_QUEUE_RACE.md  PR7_NO_SCHEMA_MODE.md
cmake/modules/: CppcheckTargets.cmake  FindGLIB2.cmake  FindJeMalloc.cmake  FindLibYAML.cmake  FindMySQL.cmake  FindPCRE.cmake  FindPCRE2.cmake  FindSphinx.cmake  FindZSTD.cmake  Findcppcheck.cmake
debian/: control
docker/: Dockerfile
docker/bionic/: Dockerfile  README.md
docker/bookworm/: Dockerfile  README.md
docker/bullseye/: Dockerfile  README.md
docker/buster/: Dockerfile  README.md
docker/el10/: Dockerfile  README.md
docker/el7/: Dockerfile  README.md
docker/el8/: Dockerfile  README.md
docker/el9/: Dockerfile  README.md
docker/focal/: Dockerfile  README.md
docker/jammy/: Dockerfile  README.md
docker/nobel/: Dockerfile
docker/noble/: Dockerfile  README.md
docker/trixie/: Dockerfile  README.md
docs/: CMakeLists.txt  authors.rst  compiling.rst  examples.rst  files.rst  index.rst  mydumper_usage.rst  myloader_usage.rst  usage.rst
docs/_build/: conf.py.in  sources.cmake.in
docs/html/: authors.html  compiling.html  examples.html  files.html  genindex.html  index.html  mydumper_usage.html  myloader_usage.html  search.html
docs/html/_static/: documentation_options.js
package/: build.sh
package/deb/: control  control-zstd  copyright  files  rules
package/rpm/: mydumper-zstd.spec  mydumper.spec
patches/: 001-schema-wait-condition-variable.patch
src/: checksum.c  checksum.h  common.c  common.h  common_options.c  common_options.h  connection.c  connection.h  logging.c  logging.h  mydumper.c  mydumper_arguments.c  mydumper_arguments.h  mydumper_char_chunks.c  mydumper_char_chunks.h  mydumper_chunks.c  mydumper_chunks.h  mydumper_common.c  mydumper_common.h  mydumper_daemon_thread.c  mydumper_daemon_thread.h  mydumper_database.c  mydumper_database.h  mydumper_dump_into_file.c  mydumper_dump_into_file.h  mydumper_exec_command.c  mydumper_exec_command.h  mydumper_file_handler.c  mydumper_global.h  mydumper_integer_chunks.c  mydumper_integer_chunks.h  mydumper_jobs.c  mydumper_jobs.h  mydumper_masquerade.c  mydumper_masquerade.h  mydumper_multicolumn_integer_chunks.c  mydumper_multicolumn_integer_chunks.h  mydumper_partition_chunks.c  mydumper_partition_chunks.h  mydumper_pmm_thread.c  (+52 more)
src/mydumper/: mydumper.c  mydumper.h  mydumper_arguments.c  mydumper_arguments.h  mydumper_char_chunks.c  mydumper_chunks.c  mydumper_chunks.h  mydumper_common.c  mydumper_common.h  mydumper_create_jobs.c  mydumper_create_jobs.h  mydumper_daemon_thread.c  mydumper_database.c  mydumper_database.h  mydumper_exec_command.c  mydumper_exec_command.h  mydumper_file_handler.c  mydumper_file_handler.h  mydumper_global.h  mydumper_integer_chunks.c  mydumper_integer_chunks.h  mydumper_jobs.c  mydumper_jobs.h  mydumper_masquerade.c  mydumper_masquerade.h  mydumper_partition_chunks.c  mydumper_partition_chunks.h  mydumper_pmm.c  mydumper_pmm.h  mydumper_pmm_thread.c  mydumper_pmm_thread.h  mydumper_start_dump.c  mydumper_start_dump.h  mydumper_stream.c  mydumper_string_chunks.c  mydumper_string_chunks.h  mydumper_table.c  mydumper_table.h  mydumper_working_thread.c  mydumper_working_thread.h  (+2 more)
src/myloader/: myloader.c  myloader.h  myloader_arguments.c  myloader_arguments.h  myloader_common.c  myloader_common.h  myloader_control_job.c  myloader_control_job.h  myloader_database.c  myloader_database.h  myloader_directory.c  myloader_directory.h  myloader_global.h  myloader_intermediate_queue.c  myloader_intermediate_queue.h  myloader_pmm.c  myloader_pmm.h  myloader_pmm_thread.c  myloader_pmm_thread.h  myloader_process.c  myloader_process.h  myloader_process_file_type.c  myloader_process_file_type.h  myloader_process_filename.c  myloader_process_filename.h  myloader_restore.c  myloader_restore.h  myloader_restore_job.c  myloader_restore_job.h  myloader_stream.c  myloader_stream.h  myloader_table.c  myloader_table.h  myloader_worker_index.c  myloader_worker_index.h  myloader_worker_loader.c  myloader_worker_loader.h  myloader_worker_loader_main.c  myloader_worker_loader_main.h  myloader_worker_post.c  (+2 more)
test/: clean_databases.sql  dynamic.sql  mydumper.cnf  mydumper_testing_db.sql  mydumper_testing_db_template.sql
test/specific_1/: check_mydumper.sh  mydumper.cnf
test/specific_10/: check_mydumper.sh  mydumper.cnf  prepare_mydumper.sql
test/specific_11/: check_mydumper.sh  mydumper.cnf  myloader.cnf  prepare_mydumper.sql
zstd/: zstd_zlibwrapper.c
(+420 files in other folders)
